--- a/package.json
+++ b/package.json
@@ -18,12 +18,22 @@
     "license": "UNLICENSED",
     "private": true,
     "scripts": {
-        "start": "run-p start:**",
-        "start:react": "encore dev-server",
-        "start:symfony": "symfony serve",
+        "dev": "run-p dev:**",
+        "dev:symfony": "symfony serve",
+        "dev:react": "encore dev-server",
+        "prod": "sudo composer install && pnpm run prod:sequence",
+        "prod:sequence": "pnpm install && pnpm run prod:autoloader ",
+        "prod:autoloader": "composer install --no-dev --optimize-autoloader && npm run prod:warning",
+        "prod:warning": "echo Allow nodejs space with export NODE_OPTIONS=--max-old-space-size=1024",
+        "compile": "encore dev && npm run restart",
+        "restart": "sudo systemctl restart nginx && pnpm run restart:success",
+        "restart:success": "echo Success !",
+        "packages": "composer install && npm install",
+        "encore": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production --progress"
-    },
+        "build": "encore production --progress",
+        "test": "echo Error: no test specified && exit 1"
+      },
     "dependencies": {
         "axios": "^1.5.0",
         "dotenv-webpack": "^8.0.1",
