--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
   },
   "dependencies": {
     "axios": "^1.5.0",
+    "bootstrap": "^5.3.2",
     "dotenv-webpack": "^8.0.1",
     "process": "^0.11.10",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0"
   }
